# libguac-client-streamtest

./: Makefile.am  configure.ac
client/: streamtest.json
client/streamtest-src/: guac-manifest.json
client/streamtest-src/translations/: en.json
src/: client.c  client.h
